# antibody_training_pipeline_ESM

./: .gitignore  README.md  USAGE.md  classifier.py  config.yaml  data.py  main.py  model.py  pyproject.toml  sample_data.csv  test.py  train.py
docs/: excel_to_csv_conversion_methods.md  jain_conversion_implementation_plan.md  jain_conversion_verification_report.md  jain_data_cleaning_log.md  shehata_data_sources.md
preprocessing/: process_boughter.py  process_jain.py  process_shehata.py
scripts/: convert_jain_excel_to_csv.py  convert_shehata_excel_to_csv.py  validate_jain_conversion.py  validate_shehata_conversion.py
src/antibody_dev_esm/: __init__.py
test_datasets/: jain.csv  shehata.csv
test_datasets/jain/: All-CDRs_jain.csv  All-FWRs_jain.csv  Full_jain.csv  H-CDR1_jain.csv  H-CDR2_jain.csv  H-CDR3_jain.csv  H-CDRs_jain.csv  H-FWRs_jain.csv  L-CDR1_jain.csv  L-CDR2_jain.csv  L-CDR3_jain.csv  L-CDRs_jain.csv  L-FWRs_jain.csv  VH_only_jain.csv  VL_only_jain.csv
test_datasets/shehata/: All-CDRs_shehata.csv  All-FWRs_shehata.csv  Full_shehata.csv  H-CDR1_shehata.csv  H-CDR2_shehata.csv  H-CDR3_shehata.csv  H-CDRs_shehata.csv  H-FWRs_shehata.csv  L-CDR1_shehata.csv  L-CDR2_shehata.csv  L-CDR3_shehata.csv  L-CDRs_shehata.csv  L-FWRs_shehata.csv  VH_only_shehata.csv  VL_only_shehata.csv
train_datasets/: H-CDR3_training_ready.csv  VH_only_training_ready.csv
