[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "antibody-dev-esm"
version = "1.0.0"
description = "Antibody developability analysis using ESM protein language model"
requires-python = ">=3.9"
dependencies = [
    "torch>=2.6.0",
    "transformers>=4.30.0",
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "scikit-learn>=1.3.0",
    "tqdm>=4.65.0",
    "PyYAML>=6.0.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "scipy>=1.10.0",
    "pyparsing>=3.0.0",
    'plotly',
    "jupyterlab>=4.4.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.black]
line-length = 88
target-version = ['py39']

[tool.isort]
profile = "black"
line_length = 88
